developer.wordpress.org: Display table of contents at full content-width above page content to prevent squashing display of tables in REST API handbook reference sub-pages.
Props jnylen0.
Fixes #2347.



git-svn-id: https://meta.svn.wordpress.org/sites/trunk@4609 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-developer/scss/main.scss
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-developer/scss/main.scss
@@ -1592,6 +1592,30 @@
 	}
 }
 
+.rest-api-handbook-reference {
+
+	.table-of-contents {
+		float: none;
+		overflow: hidden;
+		width: 100%;
+		margin: 0 auto 1em;
+		clear: both;
+
+		ul.items li ul li {
+			display: inline;
+
+			&::after {
+				content: '; ';
+			}
+
+			&:last-child::after {
+				content: '';
+			}
+		}
+	}
+
+}
+
 @media ( max-width: 59.999999em ) {
 
 	.devhub-wrap {
